--- a/package.json
+++ b/package.json
@@ -66,5 +66,5 @@
     "react-app-rewire-alias": "~1.1.7",
     "react-app-rewired": "~2.2.1"
   },
-  "homepage": "https://cahlr.github.io/OATutor-Inaccurate-Accurate/"
+  "homepage": "https://anonymous1234211.github.io/hallucination-study/"
 }
